--- a/style.css
+++ b/style.css
@@ -155,4 +155,13 @@ div.center {
   right: 12px;
 }
 
+/* CSS for the Twitter link */
+a#twitter-link {
+  display: inline-block;
+  width: auto; /* Adjust the width as needed */
+  height: auto; /* Keeps the aspect ratio of the image */
+  padding: 0;
+  margin: 0;
+}
+
 
