--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* General Styles */
 html, body {
-  background: #0A1E77;
+  background: #D7CBD9;
   font-family: Arial, sans-serif;
   color: #fff;
 }
